[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "Score: 0"
align = 2

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "USE AS DIRECTED"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StatusBar" type="ColorRect" parent="."]
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 0.95
size_flags_vertical = 0
color = Color( 1, 0, 0, 1 )

[node name="Green" type="ColorRect" parent="StatusBar"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
color = Color( 0.172549, 1, 0, 1 )

[node name="Marker" type="ColorRect" parent="StatusBar"]
anchor_left = 0.49
anchor_top = -0.2
anchor_right = 0.51
anchor_bottom = 1.2
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
